--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ google-auth==1.11.2
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
 googleapis-common-protos==1.51.0
+gunicorn==20.0.4
 httplib2==0.17.0
 idna==2.9
 itsdangerous==1.1.0
