--- a/requirements.txt
+++ b/requirements.txt
@@ -21,20 +21,21 @@ google-auth==1.11.2
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
 googleapis-common-protos==1.51.0
-gunicorn==20.0.4
 httplib2==0.17.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 numpy==1.18.1
+oauth2client==4.1.3
 oauthlib==3.0.1
 pandas==1.0.3
 plotly==4.5.4
-protobuf==3.11.3
+protobuf==3.11.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 pycparser==2.20
+pygsheets==2.0.3.1
 PyJWT==1.7.1
 pyOpenSSL==19.1.0
 PySocks==1.7.1
