--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 click==7.1.1
 cryptography==2.8
 dash==1.9.1
+dash-bootstrap-components==0.9.1
 dash-core-components==1.8.1
 dash-html-components==1.0.2
 dash-renderer==1.2.4
